# jh-hello-shuttle

./: Cargo.toml  README.md  loot_index.html  loot_tables.js  schema.sql  static_index.html
src/: lib.rs  main.rs
static/: index.html  loot_tables_bg.wasm
templates/: hello.html.hbs
