[package]
name = "jh-hello-shuttle"
version = "0.1.2"
edition = "2021"
description = "my first shuttle/rocket project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]


[dependencies]
rocket = "0.5.0-rc.2"
# sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
shuttle-service = { version = "0.7.0", features = ["web-rocket"] }
