[package]
name = "jh-hello-shuttle"
version = "0.1.2"
edition = "2021"
description = "my first shuttle/rocket project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-rocket = "0.12.0"
shuttle-runtime = "0.12.0"
tokio = "1.26.0"

rocket = "0.5.0-rc.2"
shuttle-static-folder = "0.12.0"
# sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }

